@startuml 06_Class_diagram
title Diagramme de classes

class Commande{
    creer()
    payer()
    lister()
    modifier_status_commande()
    consulter_status_commande()
    modifier_composition()
    modifier_status_element()
    consulter_status_element()
    --
    numero: Integer
    date: Date
    statut_commande: String
    statut_element: String
    paiement: Boolean
    client: Integer
    boutique: Integer
    recette: Integer
    quantite: Integer
}

class Recette{
    creer()
    lister()
    modifier()
    supprimer()
    ajouter_element()
    retirer_element()
    consulter()
    --
    designation: String
    prix: Float
    ingredient: Integer
    quantite: Float
}

class Ingredient{
    creer()
    lister()
    modifier()
    supprimer()
    consulter_stock()
    mettre_a_jour_stock()
    --
    designation: String
    quantite: Float
    boutique: Integer
    prix: Float
    unite: String
}

class User{
    identifier()
    creer_utilisateur()
    modifier_utilisateur()
    --
    login: String
    nom: String
    prenom: String
    email: String
    telephone: String
    role: String
    boutique: Integer
}

class Boutique{
    creer_boutique()
    modifier_boutique()
    --
    designation: String
    adresse: String
}

Commande *- Recette

Recette *-- Ingredient

User - Commande
User - Boutique
Commande -- Boutique

Boutique - Ingredient


@enduml